# cpuinfo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  ci_linux.yml  ci_mach.yml  ci_mach_arm.yml  ci_win.yml
src/: main.cpp
test/: cpu_cores_test.cpp  cpu_freq_test.cpp  cpu_model_test.cpp  include_hwinfo_test.cpp
